fixed distorted logo

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -31,7 +31,6 @@ div.anchor {
 
 .grid-image {
     width: inherit;
-    max-width: 100%;
     max-height: 150px;
 }
 
